--- a/distractme-client/src/components/Footer/Footer.scss
+++ b/distractme-client/src/components/Footer/Footer.scss
@@ -4,7 +4,7 @@
 
 
 footer {
-  padding-top: 4em;
+  padding-top: 4rem;
 
     nav {
       display: flex;
@@ -19,9 +19,8 @@ footer {
       display: flex;
       flex-direction: column;
 
-  
       li {
-        margin: 5px; 
+        margin: .3125rem; 
       }
   
       a {
