--- a/distractme-client/src/styles/_variables.scss
+++ b/distractme-client/src/styles/_variables.scss
@@ -7,7 +7,5 @@ $primary-color-lilac: #c8a2c8;
 $secondary-color-dark-lilac: #b18ab1;
 $secondary-color-white: #F0EAD6;
 
-
-
 $font-family-dancing-script: 'Dancing Script', cursive;
-$font-family-roboto: 'Roboto', sans-serif;
+$font-family-lora: 'Lora', serif;
