--- a/distractme-client/src/components/MainPage/MainPage.scss
+++ b/distractme-client/src/components/MainPage/MainPage.scss
@@ -27,10 +27,10 @@
     &-text {
       font-size: 1rem; 
       font-family: 'Dancing Script', cursive;
-      padding: 20px 15px; 
+      padding: 1.25rem .9375rem; 
       color: $primary-color-navy;
       background-color: #c8a2c8; 
-      border: 2px solid $secondary-color-white;
+      border: .125rem solid $secondary-color-white;
       border-radius: 50%; 
       cursor: pointer;
       display: flex;
@@ -41,7 +41,7 @@
 
       &--semicolon {
         font-size: 2.2rem; 
-        margin-top: -10px;
+        margin-top: -0.625rem;
       }
 
       &:hover {
