--- a/distractme-client/src/styles/_fonts.scss
+++ b/distractme-client/src/styles/_fonts.scss
@@ -1,4 +1,4 @@
 @use './variables' as *;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&display=swap');
